--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -19,17 +19,15 @@
     <table class="table">
         <thead>
         <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Value</th>
             <th scope="col">Description</th>
+            <th scope="col">Value</th>
             <th scope="col">Date</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="item: ${finance}">
-            <th scope="row" th:text="${item.getId()}">1</th>
-            <td th:text="${item.getValue()}">12.01.2019</td>
-            <td th:text="${item.getDescription()}">12.01.2019</td>
+            <th th:text="${item.getDescription()}">3 Knöpfe waren bestellt</th>
+            <td th:text="${item.getValue()}">1</td>
             <td th:text="${item.date.get()}">12.01.2019</td>
         </tr>
         </tbody>
