fix entries template

--- a/src/main/resources/templates/entries.html
+++ b/src/main/resources/templates/entries.html
@@ -34,11 +34,11 @@
     </ul>
     -->
 
-    <table class="table" th:each="entry : ${existingEntries}" th:action="@{/rooms/{id}/showEntries}">
+    <table class="table mb-md-5" th:each="entry : ${existingEntries}" th:action="@{/rooms/{id}/showEntries}">
         <tbody>
         <tr>
-            <th scope="row" th:text="#{orders.ticket.id}">Order ID</th>
-            <td th:text="${entry.getOrder().getId()}">bb46124d-aeb3-4d85-9f2f-db957b45cebb</td>
+                <th scope="row" th:text="#{orders.ticket.id}">Order ID</th>
+                <th th:text="${entry.getOrder().getId()}">bb46124d-aeb3-4d85-9f2f-db957b45cebb</th>
         </tr>
         <tr>
             <th scope="row" th:text="#{general.customer}">Customer</th>
@@ -49,12 +49,16 @@
             <td th:text="${entry.getOrder().getItem().getName()}">Linux</td>
         </tr>
         <tr>
-            <th scope="row" th:text="#{general.price}">Price</th>
-            <td th:text="${entry.getOrder().getTotal()}">1.54EUR</td>
-        </tr>
-        <tr>
             <th scope="row" th:text="#{orders.expectedfinished}">Expected Finishing Date</th>
             <td th:text="${entry.getOrder().getExpectedFinished()}">12.11.2019</td>
+        </tr>
+        <tr>
+            <th scope="row" th:text="#{entries.beginning}">Beginning</th>
+            <td th:text="${entry.getBeginning()}">Start</td>
+        </tr>
+        <tr>
+        <th scope="row" th:text="#{entries.End}">End</th>
+        <td th:text="${entry.getEnd()}">End</td>
         </tr>
         </tbody>
     </table>
