--- a/src/main/resources/templates/addItem.html
+++ b/src/main/resources/templates/addItem.html
@@ -24,7 +24,7 @@
 
         <div class="form-group">
             <label for="price">Preis</label>
-            <input id="price" name="price" class="form-control" th:field="*{price}" th:errorclass="fieldError" type="number" min="0.01" step="0.01" required="required"/><br/>
+            <input id="price" name="price" class="form-control" th:field="*{price}" th:errorclass="fieldError" type="number" step="0.01" required="required"/><br/>
             <div class="ui negative message" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
         </div>
 
