--- a/src/main/resources/templates/material.html
+++ b/src/main/resources/templates/material.html
@@ -7,13 +7,13 @@
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 
-    <title>Materialien</title>
+    <title th:text="#{materials}">Materialien</title>
 </head>
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
-    <h1>Materialien</h1>
+    <h1 th:text="#{materials}">Materialien</h1>
 
     <form action="material.html" class="input-group mb-3" method="post" th:action="@{material/consume}">
         <div class="form-inline">
@@ -31,11 +31,11 @@
         <input id="number" required type="number" name="number" min="1" max="10000" class="form-control">
         </div>
         <div class="form-inline">
-            <input class="btn btn-outline-primary" type="submit" name="restock_name" th:value="Restock" th:formaction="@{material/restock}">
+            <input class="btn btn-outline-primary" type="submit" name="restock_name"  th:value="#{materials.restock}"  th:formaction="@{material/restock}">
         </div>
 
         <div class="form-inline">
-            <input class="btn btn-outline-secondary" type="submit" name="consume_name" th:value="Consume">
+            <input class="btn btn-outline-secondary" type="submit" name="consume_name" th:value="#{materials.consume}" >
         </div>
     </form>
 
@@ -43,8 +43,8 @@
     <table class="table">
         <thead>
         <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Menge</th>
+            <th scope="col" th:text="#{materials.table.name}">Name</th>
+            <th scope="col" th:text="#{materials.table.quantity}">Menge</th>
         </tr>
         </thead>
         <tbody>
