--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -49,6 +49,12 @@
                    required="required"/><br/>
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password must not be empty</p>
         </div>
+        <div class="form-group">
+            <label th:text="#{users.registration.salary}" for="salary">Salary</label>
+            <input class="form-control" id="salary" name="salary" th:field="*{salary}" th:errorclass="fieldError" type="number"
+                   required="required" min="0" step="0.01"/><br/>
+            <p th:if="${#fields.hasErrors('salary')}" th:errors="*{salary}">Please enter a salary.</p>
+        </div>
 
         <button class="btn btn-primary" type="submit" th:text="#{users.registration.submit}">Registrieren</button>
     </form>
