table inside table structure

--- a/src/main/resources/templates/entries.html
+++ b/src/main/resources/templates/entries.html
@@ -33,7 +33,7 @@
         <li class="list-group-item" th:text="${entry.getOrder().getCustomer()}"></li>
     </ul>
     -->
-
+    <!--
     <table class="table" th:each="entry : ${existingEntries}" th:action="@{/rooms/{id}/showEntries}">
         <tbody>
         <tr>
@@ -56,6 +56,27 @@
             <th scope="row" th:text="#{orders.expectedfinished}">Expected Finishing Date</th>
             <td th:text="${entry.getOrder().getExpectedFinished()}">12.11.2019</td>
         </tr>
+        </tbody>
+    </table>
+    -->
+    <table class="table" th:action="@{/rooms/showEntries}">
+        <thead>
+            <tr>
+                <th th:each="room : ${roomRepository}">lul</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td th:each="room : ${roomRepository}">
+                    <table>
+                        <tbody>
+                            <tr th:each="room : ${roomRepository}">
+                                <td>1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
         </tbody>
     </table>
 
