--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -39,10 +39,11 @@
                     <form class="button" th:action="@{/users/edit/{id}(id=${staff.getId()})}">
                         <button type="submit" class="btn btn-primary mr-1" th:text="#{users.edit}">Bearbeiten</button>
                     </form>
-                    <form class="button" method="post" th:action="@{/users/delete/{userName}/{id}(userName=${staff.getUserName()}, id=${staff.getId()})}">
+                    <form class="form-inline" method="post" th:action="@{/users/delete/{userName}/{id}(userName=${staff.getUserName()}, id=${staff.getId()})}">
                         <div class="form-check form-group">
                             <button type="submit" class="btn btn-danger" th:text="#{users.remove}">Entlassen</button>
-                            <input class="form-check-input" id="fire" required type="checkbox">
+                            <label class="sr-only" for="fire" th:text="#{users.remove.confirmation}">Confirm Deletion</label>
+                            <input class="form-check form-check-input ml-2" id="fire" required type="checkbox">
                         </div>
                     </form>
                 </div>
