--- a/src/main/resources/templates/finance.html
+++ b/src/main/resources/templates/finance.html
@@ -14,7 +14,6 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="container mt-md-5">
-
     <h1>Finance</h1>
     <table class="table">
         <thead>
@@ -30,15 +29,16 @@
             <td th:text="${item.getValue()}">1</td>
             <td th:text="${item.getDate().get()}">12.01.2019</td>
         </tr>
-        <div> <a class="btn btn-info mb-2" th:href="@{/finance/month}">Letzten Monat anzeigen</a> </div>
         </tbody>
     </table>
-    <p>Summe: <span th:text="${sum} + '' ">34</span></p>
+    <p>Summe: <span th:text="${sum}">34</span></p>
 
-    <div> <a class="btn btn-primary mt-2" th:href="@{/finance/addItem}">Finance item hinfügen</a> </div>
-
+    <div class="mt-2">
+        <a class="btn btn-primary" th:href="@{/finance/addItem}">Finance item hinzufügen</a>
+        <a th:unless="${lastMonth}" class="btn btn-info" th:href="@{/finance/month}">Letzten Monat anzeigen</a>
+        <a th:if="${lastMonth}" class="btn btn-info" th:href="@{/finance}">Gesamtübersicht anzeigen</a>
+    </div>
 </div>
-
 
 
 <footer th:replace="fragments :: footer"></footer>
