--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -39,7 +39,7 @@
                     <form class="button" th:action="@{/users/edit/{id}(id=${staff.getId()})}">
                         <button type="submit" class="btn btn-primary mr-1" th:text="#{users.edit}">Bearbeiten</button>
                     </form>
-                    <form class="form-inline" method="post" th:action="@{/users/delete/{userName}/{id}(userName=${staff.getUserName()}, id=${staff.getId()})}">
+                    <form class="form-inline" method="post" th:action="@{/users/delete/{userName}(userName=${staff.getUserName()})}">
                         <div class="form-check form-group">
                             <button type="submit" class="btn btn-danger" th:text="#{users.remove}">Entlassen</button>
                             <label class="sr-only" for="fire" th:text="#{users.remove.confirmation}">Confirm Deletion</label>
