add customer to template table

--- a/src/main/resources/templates/entries.html
+++ b/src/main/resources/templates/entries.html
@@ -26,6 +26,7 @@
                 <td th:each="field: ${row}">
                     <div th:if="${field}">
                         <span th:text="${field.getOrder().getId()}">efe3-2daee3-adede3</span>
+                        <span th:text="${field.getOrder().getCustomer()}">efe3-2daee3-adede3</span>
                     </div>
                     <div th:unless="${field}">
                         <span>-</span>
