--- a/src/main/resources/templates/orderItem.html
+++ b/src/main/resources/templates/orderItem.html
@@ -15,7 +15,7 @@
 <div class="container mt-md-5">
     <h1 th:text="#{orderItems}">Bestellgegenstände</h1>
 
-    <form action="orderItem.html" method="post" th:if="${!orderItem.isEmpty()}">
+    <form class="input-group mb-3" method="post">
     <table class="table">
         <thead>
         <tr>
