--- a/src/main/resources/templates/pickup.html
+++ b/src/main/resources/templates/pickup.html
@@ -28,7 +28,7 @@
             <label class="form-check-label" for="paid" th:text="#{orders.pickup.transaction}">Transaction handled.</label>
         </div>
 
-        <button class="btn btn-success" type="submit" th:text="#{orders.pickup.submit}">Complete Order</button>
+        <button class="btn btn-success" type="submit" th:text="#{orders.pickup.submit}">Complete Order</button>x
     </form>
 </div>
 
