cancelling/giving back order without pay added

--- a/src/main/resources/templates/orderdetail.html
+++ b/src/main/resources/templates/orderdetail.html
@@ -50,13 +50,13 @@
             <td th:text="#{'orders.service.' + ${service.getName()}}">Kludge (Sole)</td>
         </tr>
         <tr>
-            <th scope="col" th:text="Placholder"></th>
+            <th scope="col"></th>
             <td>
-                <form method="post" th:if="!${order.getOrderState()} == ${(order.canceled)}" th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
-                    <button class="btn btn-outline-primary">Give back unfinished</button>
+                <form method="post" th:if="(!${order.canPickUp()}) and (${order.getItem()} != null)" th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
+                    <button class="btn btn-outline-danger" th:text="#{orders.pickup.beforeFinished}"></button>
                 </form>
-                <form method="post" th:if="${order.canPickUp()}" th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
-                    <button class="btn btn-outline-secondary"  th:text="#{orders.pickup.returnWithoutPay}"></button>
+                <form method="post" th:if="(${order.canPickUp()}) and  (${order.getItem()} != null)" th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
+                    <button class="btn btn-outline-success"  th:text="#{orders.pickup.returnWithoutPay}"></button>
                 </form>
             </td>
         </tr>
