--- a/src/main/resources/templates/orderdetail.html
+++ b/src/main/resources/templates/orderdetail.html
@@ -50,18 +50,47 @@
             <td th:text="#{'orders.service.' + ${service.getName()}}">Kludge (Sole)</td>
         </tr>
         <tr>
-            <th scope="col"></th>
+            <th scope="col">
+
+            </th>
             <td>
                 <form method="post" th:if="(!${order.canPickUp()}) and (${order.getItem()} != null)" th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
-                    <button class="btn btn-outline-danger" th:text="#{orders.pickup.beforeFinished}"></button>
+                    <div class="form-inline">
+                        <div class="form-group form-check">
+                            <div class="form-inline">
+                                <label class="form-check-label" for="youSure" th:text="#{orders.pickup.sure}"></label>
+                            </div>
+                            <div class="form-inline ml-1">
+                                <input class="form-check-input" id="youSure" required type="checkbox">
+                            </div>
+                        </div>
+                        <div class="form-inline ml-5">
+                            <button class="btn btn-outline-danger" type="submit" th:text="#{orders.pickup.beforeFinished}"></button>
+                        </div>
+                    </div>
                 </form>
+                
                 <form method="post" th:if="(${order.canPickUp()}) and  (${order.getItem()} != null)" th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
-                    <button class="btn btn-outline-success"  th:text="#{orders.pickup.returnWithoutPay}"></button>
+                    <div class="form-inline">
+                        <div class="form-group form-check">
+                            <div class="form-inline">
+                                <label class="form-check-label" for="youSure2" th:text="#{orders.pickup.sure}"></label>
+                            </div>
+                            <div class="form-inline ml-1">
+                                <input class="form-check-input" id="youSure2" required type="checkbox">
+                            </div>
+                        </div>
+                        <div class="form-inline ml-5">
+                            <button class="btn btn-outline-success"  th:text="#{orders.pickup.returnWithoutPay}"></button>
+                        </div>
+                    </div>
                 </form>
             </td>
         </tr>
         </tbody>
     </table>
+
+
 </div>
 
 <footer th:replace="fragments :: footer"></footer>
