orders that got picked up no longer showing in orderItemOverview

--- a/src/main/resources/templates/orderItem.html
+++ b/src/main/resources/templates/orderItem.html
@@ -25,10 +25,10 @@
         </tr>
         </thead>
         <tbody>
-            <tr th:name="orders" th:each="order : ${orders}">
-                <td th:text="${order.getCustomer()}"></td>
-                <td th:text="${order.id}"></td>
-                <td th:if="!${order.getItem()} == null" th:text="${order.getItem().getName()}"></td>
+            <tr  th:if="!(${order.getItem()} == null)" th:name="orders" th:each="order : ${orders}">
+                <td  th:text="${order.getCustomer()}"></td>
+                <td  th:text="${order.id}"></td>
+                <td  th:text="${order.getItem().getName()}"></td>
             </tr>
         </tbody>
     </table>
