--- a/src/main/resources/templates/orderdetail.html
+++ b/src/main/resources/templates/orderdetail.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">>
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
@@ -56,37 +56,22 @@
             </th>
             <td>
                 <form method="post" sec:authorize="hasRole('ADMIN')"
-                      th:if="(!${order.canPickUp()}) and (${order.getItem()} != null)"
+                      th:if="${order.getItem()} != null"
                       th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
                     <div class="form-inline">
                         <div class="form-group form-check">
                             <div class="form-inline">
-                                <label class="form-check-label" for="youSure" th:text="#{orders.pickup.sure}"></label>
+                                <label class="form-check-label" for="youSure" th:text="#{orders.pickup.sure}">Sure?</label>
                             </div>
                             <div class="form-inline ml-1">
                                 <input class="form-check-input" id="youSure" required type="checkbox">
                             </div>
                         </div>
                         <div class="form-inline ml-5">
-                            <button class="btn btn-outline-danger" type="submit" th:text="#{orders.pickup.beforeFinished}"></button>
-                        </div>
-                    </div>
-                </form>
-                
-                <form method="post" sec:authorize="hasRole('ADMIN')"
-                      th:if="(${order.canPickUp()}) and  (${order.getItem()} != null)"
-                      th:action="@{orderItem/remove/{id}(id=${order.getItem().getId()})}">
-                    <div class="form-inline">
-                        <div class="form-group form-check">
-                            <div class="form-inline">
-                                <label class="form-check-label" for="youSure2" th:text="#{orders.pickup.sure}"></label>
-                            </div>
-                            <div class="form-inline ml-1">
-                                <input class="form-check-input" id="youSure2" required type="checkbox">
-                            </div>
-                        </div>
-                        <div class="form-inline ml-5">
-                            <button class="btn btn-outline-success"  th:text="#{orders.pickup.returnWithoutPay}"></button>
+                            <button class="btn btn-outline-danger" type="submit" th:unless="${order.canPickUp()}"
+                                    th:text="#{orders.pickup.beforeFinished}">Give back unfinished</button>
+                            <button class="btn btn-outline-danger" type="submit" th:if="${order.canPickUp()}"
+                                    th:text="#{orders.pickup.returnWithoutPay}">Return for free</button>
                         </div>
                     </div>
                 </form>
