--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -52,7 +52,7 @@
         <div class="form-group">
             <label th:text="#{users.registration.salary}" for="salary">Salary</label>
             <input class="form-control" id="salary" name="salary" th:field="*{salary}" th:errorclass="fieldError" type="number"
-                   required="required" min="0" step="0.01"/><br/>
+                   required="required" min="0" max="999999999999999" step="0.01"/><br/>
             <p th:if="${#fields.hasErrors('salary')}" th:errors="*{salary}">Please enter a salary.</p>
         </div>
 
